# BLAHAJ-rs

./: .gitignore  Cargo.toml  README.md  colors.yaml  parse_colors_to_rust.py  snapcraft.yaml
src/: cat.rs  flags.rs  main.rs  shark.rs
