[package]
name = "blahaj-rs"
version = "1.0.0"
authors = ["Umang Raghuvanshi for lolcat-rs, the lolcat contributors, and Dr_Coomer the forker"]
description = "Gay sharks at your local terminal - but in rust! lolcat-like CLI tool"
license = "MIT"
repository = "https://github.com/yoshisaac/BLAHAJ-rs"

[dependencies]
clap = "2.33.0"
rand = "0.7.3"
utf8-chars = "1.0.2"
termsize = "0.1.6"
ctrlc = "3.4.5"

[profile.release]
debug = false
lto = true
panic = "abort"
strip = true
